examples/openjml-userguide/examples/api/expected
A.java:3: verify: The prover cannot establish an assertion (Assert) in method main
    //@ assert false;
        ^
1 verification failure
EXIT: 6
EXIT: 0
B.java:2: error: The token assert is illegal or not implemented for a type or method clause (JmlParser.classOrInterfaceBodyDeclaration)
  //@ assert 0; // ERROR
      ^
1 error
EXIT: 1
Exit not OK
A.java:3: verify: JML assertion is false
    //@ assert false;
        ^
